apps/freepbx/endpoint-slice.yaml
---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: freepbx
  labels:
    kubernetes.io/service-name: freepbx
addressType: IPv4
ports:
  - name: http
    protocol: TCP
    port: 80
endpoints:
  - addresses:
      - 10.7.255.46
