apps/freepbx/endpoints.yaml
---
kind: Endpoints
apiVersion: v1
metadata:
  name: freepbx
subsets:
  - addresses:
      - ip: 10.7.255.46
    ports:
      - name: web
        port: 80
        protocol: TCP
