apps/freepbx/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: freepbx
spec:
  ports:
    - name: web
      port: 80
      protocol: TCP
      targetPort: 80
