apps/freepbx/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: freepbx
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  rules:
    - host: freepbx.chaosdorf.space
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: freepbx
                port:
                  number: 80
  tls:
    - secretName: ingress-tls
      hosts:
        - freepbx.chaosdorf.space
